# my_agents

./: .gitattributes  .gitignore  .swcrc  AGENTS.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  README.md  RELEASE-NOTES-v2.5.0-alpha.130.md  SECURITY.md  claude-flow  package-lock.json  package.json  test-agent-execution.sh  verification.md  verification.md.json  witness-fixes.json
.agentic-flow/: intelligence.json
.claude/: mcp.json  settings.json  statusline.sh
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-commit
agents/: architect.yaml  coder.yaml  reviewer.yaml  security-architect.yaml  tester.yaml
agents-advanced/: README.md
alexko/: README.md  package.json
data/: clone-data.ledger.json  clone-data.proof.json  clone-data.rvf
docs/: AGENT-CATALOG.md  AGENT-PROMPT-AUDIT-2.md  AGENT-PROMPT-AUDIT.md  AGENT-PROMPT-REMEDIATION.md  AGENTIC_FLOW_SECURITY_TEST_REPORT.md  CONCEPTS.md  CORE-AGENTS.md  FULL-BREAKDOWN.md  IMPROVEMENT-ROADMAP.md  INDEX.md  MEMORY_COMMAND_FIX.md  MEMORY_REDACTION_TEST_REPORT.md  REASONINGBANK-AGENT-CREATION-GUIDE.md  REASONINGBANK-ANALYSIS-COMPLETE.md  REASONINGBANK-CLI-INTEGRATION.md  REASONINGBANK-COST-OPTIMIZATION.md  REASONINGBANK-STATUS.md  REPORT.md  STATUS.md  USERGUIDE.md  _config.yml  agent-catalog.html  agent-report.html  build-analysis-report.md  concepts.html  dashboard.html  full-breakdown.html  how-it-works.html  index.md  session-summary.html  skills-tutorial.md  start.html
memory/: memory-store.json
plugins/: README.md
ruflo/: .env.example  README.md  docker-compose.yml  package.json
scripts/: agents-hook.mjs  audit-cli-mcp-tools.mjs  audit-env-var-precedence.mjs  audit-fix-invariants.mjs  audit-plugin-hooks-cross-platform.mjs  audit-supply-chain.mjs  benchmark-graph.mjs  benchmark-intelligence.mjs  check-agents.mjs  connect-to-project.mjs  detect-profile.mjs  gen-agent-catalog.mjs  gen-agent-report.mjs  gen-counts.mjs  gen-full-breakdown.mjs  gif-to-webp.mjs  install.sh  (+20 more)
v3/crates/ruflo-federation-peer/: Cargo.toml
v3/crates/ruflo-federation-peer/src/: bin.rs  lib.rs
(+2074 files in other folders)
